--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection":"Data Source=localhost\\SQLEXPRESS;Initial Catalog=DatingApp2022;Integrated Security=True"
   },
+  "TokenKey":"averylongReallyToken",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
